# Heimdall

./: .commitlintrc.json  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Dockerfile.vuln-test  GOVERNANCE.md  LICENSE  README.md  SECURITY.md  cliff.toml  deny.toml  rustfmt.toml
crates/heimdall/: Cargo.toml  build.rs
crates/heimdall-bench/: Cargo.toml
crates/heimdall-bench/benches/: admission.rs  allocator.rs  cache.rs  dns_core.rs  rpz.rs
crates/heimdall-bench/src/: lib.rs  main.rs  reference.rs
crates/heimdall-bench/tests/: harness_tests.rs
crates/heimdall-ci-tools/: Cargo.toml
crates/heimdall-ci-tools/src/: lib.rs  main.rs
crates/heimdall-core/: Cargo.toml  README.md
crates/heimdall-core/src/: edns.rs  header.rs  lib.rs  name.rs  parser.rs  rdata.rs  record.rs  serialiser.rs  sig0.rs  tsig.rs
crates/heimdall-core/src/dnssec/: algorithms.rs  budget.rs  canonical.rs  mod.rs  nsec.rs  synthesis.rs  verify.rs
crates/heimdall-core/src/zone/: directives.rs  integrity.rs  limits.rs  mod.rs  parser.rs  tokenizer.rs
crates/heimdall-core/tests/: proptest_roundtrip.rs
crates/heimdall-e2e-harness/: Cargo.toml
crates/heimdall-e2e-harness/src/: dns_client.rs  lib.rs  pki.rs  spy_dns.rs  zones.rs
crates/heimdall-integration-tests/: Cargo.toml
crates/heimdall-integration-tests/src/: cache_admission_e2e.rs  conformance.rs  dnssec_vectors.rs  ecs_strip.rs  golden_coredns.rs  golden_knot.rs  golden_nsd.rs  golden_powerdns.rs  golden_unbound.rs  hardening_drift_check.rs  hardening_fs.rs  hardening_macos.rs  hardening_nopriv.rs  hardening_openbsd.rs  hardening_privdrop.rs  hardening_seccomp.rs  hardening_wx.rs  interop_doh.rs  interop_doq.rs  interop_dot.rs  lib.rs  nsec_synthesis_e2e.rs  perf_iouring.rs  perf_reuseport.rs  rfc4034.rs  soak_cache_eviction.rs  soak_crash_recovery.rs  soak_ddos.rs  soak_fd_leak.rs  soak_memory_leak.rs  soak_reload_under_load.rs  soak_sustained_load.rs  soak_tek_rotation.rs  step4_ede20.rs  validator_e2e.rs
crates/heimdall-probe/: Cargo.toml
crates/heimdall-probe/src/: main.rs
crates/heimdall-roles/: Cargo.toml
crates/heimdall-roles/src/: lib.rs  multi_role.rs
crates/heimdall-roles/src/auth/: axfr.rs  ixfr.rs  lifecycle.rs  mod.rs  notify.rs  query.rs  secondary.rs  update.rs  zone_role.rs
crates/heimdall-roles/src/dnssec_roles/: mod.rs  nta.rs  trust_anchor.rs
crates/heimdall-roles/src/forwarder/: cache.rs  client.rs  client_classic.rs  client_doh_h2.rs  client_doh_h3.rs  client_doq.rs  client_dot.rs  dispatcher.rs  mod.rs  pool.rs  ratelimit.rs  server.rs  upstream.rs  validate.rs
crates/heimdall-roles/src/recursive/: aggressive_nsec.rs  cache.rs  dispatcher.rs  error.rs  follow.rs  glue.rs  mod.rs  qname_min.rs  root_hints.rs  server_state.rs  timing.rs  upstream.rs  validate.rs  zero_x_twenty.rs
crates/heimdall-roles/src/rpz/: action.rs  engine.rs  loader.rs  mod.rs  redis.rs  trie.rs  trigger.rs  zone.rs
crates/heimdall-roles/tests/: auth_tests.rs  forwarder_tests.rs  recursive_tests.rs  rpz_tests.rs  secondary_soa_timers.rs
crates/heimdall-runtime/: Cargo.toml  build.rs
crates/heimdall-runtime/src/: config.rs  drain.rs  lib.rs  runtime.rs  state.rs  supervisor.rs
crates/heimdall-runtime/src/admission/: acl.rs  cidr.rs  load_signal.rs  mod.rs  pipeline.rs  query_rl.rs  resource.rs  rrl.rs  telemetry.rs
crates/heimdall-runtime/src/cache/: admission.rs  entry.rs  forwarder.rs  limits.rs  mod.rs  recursive.rs  shard.rs  slru.rs
crates/heimdall-runtime/src/ops/: admin_rpc.rs  anomaly.rs  audit.rs  mod.rs  observability.rs  reload.rs  sd_notify.rs
crates/heimdall-runtime/src/security/: mod.rs  pledge.rs  privdrop.rs  seccomp.rs
crates/heimdall-runtime/src/store/: backoff.rs  cache_store.rs  client.rs  encoding.rs  ixfr_journal.rs  metrics.rs  mod.rs  zone_store.rs
crates/heimdall-runtime/src/transport/: backpressure.rs  cookie.rs  doh2.rs  doh3.rs  dot.rs  mod.rs  quic.rs  tcp.rs  tls.rs  tls_telemetry.rs  udp.rs
crates/heimdall-runtime/tests/: admission_tests.rs  cache_tests.rs  doh2_tests.rs  doh3_tests.rs  doq_tests.rs  dot_tests.rs  integration_tests.rs  loom_cache_tests.rs  loom_tests.rs  ops_tests.rs  resource_limits_e2e.rs  store_tests.rs  transport_tests.rs
crates/heimdall/src/: alloc.rs  build_info.rs  check_config.rs  cli.rs  config.rs  listeners.rs  logging.rs  main.rs  privdrop.rs  redis_boot.rs  rlimit.rs  roles.rs  runtime.rs  signals.rs
crates/heimdall/tests/: admin_rpc_boot.rs  admission.rs  anomaly_events_e2e.rs  auth_basic.rs  auth_dnssec_e2e.rs  auth_ixfr_e2e.rs  auth_negative.rs  auth_notify.rs  auth_tsig_attacks.rs  auth_xfer.rs  axfr_dnssec_passthrough.rs  cache_hit_e2e.rs  check_config.rs  cli_smoke.rs  config_snapshot.rs  disabled_role_e2e.rs  drain.rs  end_to_end.rs  forwarder_transports.rs  harness_smoke.rs  image_failclose.rs  listener_boot.rs  multi_role_e2e.rs  notify_e2e.rs  observability_boot.rs  padding.rs  pki_expiry.rs  privdrop.rs  recursive_0x20.rs  recursive_aggressive_nsec.rs  recursive_chase.rs  recursive_dnssec.rs  recursive_glue.rs  recursive_qname_min.rs  redis_boot.rs  redis_drain.rs  redis_persistence_e2e.rs  rlimit.rs  role_boot.rs  role_step4_e2e.rs  (+15 more)
crates/heimdall/tests/fixtures/invalid/: all_roles_false.toml  bad_tls_cert.toml  bad_transport.toml  bad_zone_path.toml  missing_listener_with_role.toml  no_roles.toml  not_toml.toml  port_conflict.toml  ttl_order.toml  udp_buffer_too_small.toml  unknown_key.toml
crates/heimdall/tests/fixtures/valid/: authoritative_tcp.toml  drain_double.toml  forwarder_dot.toml  listener_tcp.toml  listener_udp.toml  minimal.toml  minimal_json.toml  multi_role_multi_listener.toml  recursive_udp.toml  rlimit.toml  udp_e2e.toml  with_observability.toml
crates/heimdall/tests/fixtures/zones/: example.com.zone  leaf-example-test.zone  notify-test.zone  root.zone  rpz-triggers.test.zone  (+2 more)
fuzz/: Cargo.toml  generate_corpus.sh
fuzz/corpus/fuzz_zone_parser/: seed_comment.txt  seed_minimal.txt
fuzz/fuzz_targets/: fuzz_nsec3_hash.rs  fuzz_parse_edns.rs  fuzz_parse_message.rs  fuzz_zone_parser.rs
(+198 files in other folders)
