[package]
name = "heimdall-ci-tools"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "CI tooling for Heimdall: hardening drift detection and profile consistency checks."
publish = false

[[bin]]
name = "hardening-drift-check"
path = "src/main.rs"

[dependencies]

[lints]
workspace = true
