[package]
name = "heimdall-e2e-harness"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Subprocess test harness for Heimdall end-to-end integration tests."
publish = false

[dependencies]
tempfile = "3"
# rcgen — TLS cert generation for test PKI (Sprint 47 task #467).
rcgen = "0.13"
# base64 — encode RRSIG/DNSKEY bytes in generated zone files and PKI parsing.
base64 = "0.22"
# heimdall-core — TSIG signing for AXFR/IXFR test client queries.
heimdall-core = { path = "../heimdall-core" }
# rustls + rustls-pemfile — synchronous DoT/DoH/DoQ test clients (Sprint 47 task #575).
rustls = { version = "0.23", features = ["ring"] }
rustls-pemfile = "2"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[lints]
workspace = true
