[package]
name = "heimdall-integration-tests"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Protocol-conformance and interop integration test suite for Heimdall."
publish = false

[dependencies]
heimdall-core = { path = "../heimdall-core" }

[dev-dependencies]
# base64 — standard-alphabet decoder used to embed RFC test vectors verbatim (ENG-035).
base64 = "0.22"
# heimdall-roles — recursive/forwarder validator wirings exercised in task #364.
heimdall-roles = { path = "../heimdall-roles" }
# heimdall-runtime — RecursiveCache used by the RecursiveServer in dispatcher e2e tests.
heimdall-runtime = { path = "../heimdall-runtime" }
# tokio — async test executor for dispatcher end-to-end tests.
tokio = { version = "1", features = ["full"] }
# tempfile — ephemeral directories for TrustAnchorStore in tests.
tempfile = "3"

[lints]
workspace = true
