[package]
name = "heimdall-integration-tests"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Protocol-conformance and interop integration test suite for Heimdall."
publish = false

[dependencies]
heimdall-core = { path = "../heimdall-core" }
# heimdall-ci-tools — drift detection library used in hardening_drift_check tests (Sprint 37).
heimdall-ci-tools = { path = "../heimdall-ci-tools" }

[dev-dependencies]
# base64 — standard-alphabet decoder used to embed RFC test vectors verbatim (ENG-035).
base64 = "0.22"
# nix — Unix system-call wrappers used in hardening validation tests (Sprint 37).
nix = { version = "0.29", features = ["process", "signal"] }
# libc — raw syscall numbers for seccomp test scenarios (Sprint 37 task #371).
libc = "0.2"
# heimdall-roles — recursive/forwarder validator wirings exercised in task #364.
heimdall-roles = { path = "../heimdall-roles" }
# heimdall-runtime — RecursiveCache used by the RecursiveServer in dispatcher e2e tests.
heimdall-runtime = { path = "../heimdall-runtime" }
# tokio — async test executor for dispatcher end-to-end tests.
tokio = { version = "1", features = ["full"] }
# tempfile — ephemeral directories for TrustAnchorStore in tests.
tempfile = "3"
# ring — SHA-256 in rfc4034 DS golden-vector test (task #370).
ring = "0.17"
# rustls + quinn — DoQ interop test TLS client (task #370).
rustls = { version = "0.23", default-features = false, features = ["std", "ring"] }
quinn = { version = "0.11", features = ["runtime-tokio"] }
# redis — async client for crash-recovery Redis integration test (task #530).
redis = { version = "0.27", features = ["tokio-comp"] }
# arc-swap — lock-free ArcSwap used in FD-leak and reload-under-load tests (tasks #527, #551).
arc-swap = "1.9"

[lints]
workspace = true
