[package]
name = "heimdall-roles"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Authoritative zone management, recursive resolver, forwarder, and query-resolution precedence logic for Heimdall."

[dependencies]
heimdall-core = { path = "../heimdall-core" }
heimdall-runtime = { path = "../heimdall-runtime" }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
arc-swap = "1.9"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
tempfile = "3"

[lints]
workspace = true
