[package]
name = "heimdall-roles"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Authoritative zone management, recursive resolver, forwarder, and query-resolution precedence logic for Heimdall."

[dependencies]
heimdall-core = { path = "../heimdall-core" }
heimdall-runtime = { path = "../heimdall-runtime" }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
arc-swap = "1.9"
# rustls — TLS 1.3 outbound client config for DoT (ADR-0027, re-using audited dep).
rustls = { version = "0.23", default-features = false, features = ["std", "ring"] }
# tokio-rustls — async TLS wrapper for tokio TCP streams (ADR-0044, re-using audited dep).
tokio-rustls = "0.26"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
tempfile = "3"

[lints]
workspace = true
