[package]
name = "heimdall-roles"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Authoritative zone management, recursive resolver, forwarder, and query-resolution precedence logic for Heimdall."

[dependencies]
heimdall-core = { path = "../heimdall-core" }
heimdall-runtime = { path = "../heimdall-runtime" }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
arc-swap = "1.9"
# rustls — TLS 1.3 outbound client config for DoT/DoH/DoQ (ADR-0027).
rustls = { version = "0.23", default-features = false, features = ["std", "ring"] }
# tokio-rustls — async TLS wrapper for tokio TCP streams (ADR-0044).
tokio-rustls = "0.26"
# hyper + hyper-util + hyper-rustls + http-body-util — HTTP/2 outbound client for DoH/H2 (NET-019).
hyper = { version = "1", features = ["http1", "http2", "client"] }
hyper-util = { version = "0.1", features = ["client-legacy", "http2", "tokio"] }
hyper-rustls = { version = "0.27", default-features = false, features = ["http2", "ring", "tls12"] }
http-body-util = "0.1"
bytes = "1"
# quinn + h3 + h3-quinn — QUIC/HTTP3 outbound clients for DoH/H3 and DoQ (NET-021..024, RFC 9250).
quinn = { version = "0.11", features = ["runtime-tokio"] }
h3 = "0.0.7"
h3-quinn = "0.0.9"
# base64 — DNS message encoding for DoH GET requests.
base64 = "0.22"

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
tempfile = "3"

[lints]
workspace = true
