[package]
name = "heimdall-runtime"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Transport implementations, segregated caches, ACL evaluation, admission control, rate limiting, and observability hooks for Heimdall."

[features]
# io-uring: record IoUring flavour at start-up and enable io_uring detection.
# Actual io_uring I/O paths are deferred to later sprints.
# Requires Linux kernel >= 5.10. No tokio-uring dependency yet.
io-uring = []
# redis-integration: enables integration tests that require a live Redis 7.x server.
# Never activated in CI without an explicit Redis service in the pipeline.
redis-integration = []

[dependencies]
# libc — raw system-call bindings required by the seccomp-BPF and privdrop
# security modules (THREAT-024, THREAT-022/023).
libc = "0.2"
# tokio — async runtime (ADR-0026).
tokio = { version = "1", features = ["full"] }
# arc-swap — lock-free atomic Arc swapping for RunningState (ADR-0037).
arc-swap = "1.9"
# serde — deserialisation framework for config (ADR-0038).
serde = { version = "1.0", features = ["derive"] }
# toml — TOML config file parser (ADR-0039).
toml = "1.1"
# serde_json — JSON serialisation/deserialisation for the admin-RPC JSON-over-UDS
# protocol. Companion to serde (ADR-0038); required by the AdminRequest/AdminResponse
# wire format. Minimal feature set: no preserving-insertion-order maps.
serde_json = "1"
# heimdall-core — DNS types.
heimdall-core = { path = "../heimdall-core" }
# redis — async Redis client (ADR-0042). Features: aio (async core), tokio-comp
# (tokio integration), cluster-async (Redis Cluster), sentinel (Redis Sentinel).
redis = { version = "0.27", features = ["aio", "tokio-comp", "cluster-async", "sentinel"] }
# deadpool — generic async object pool (ADR-0043).
deadpool = { version = "0.12", features = ["managed"] }
# deadpool-redis 0.18 — purpose-built Redis connection pool wrapping redis-rs 0.27 (ADR-0043).
# Version 0.18 is the correct pairing with redis 0.27; earlier versions used redis 0.26.
deadpool-redis = { version = "0.18", features = ["rt_tokio_1", "sentinel", "cluster", "serde"] }
# tracing — structured diagnostics (ADR-0026 transitive dep; direct use in store layer).
tracing = "0.1"
# tokio-rustls — async TLS wrapper for tokio TCP streams (ADR-0044).
tokio-rustls = "0.26"
# rustls — TLS 1.3 library (ADR-0027, promoted to direct dep in heimdall-runtime).
# TLS 1.2 disabled by not enabling the `tls12` cargo feature (SEC-003).
rustls = { version = "0.23", default-features = false, features = ["std", "ring"] }
# rustls-pemfile — PEM certificate/key file parsing for operator-supplied certs (ADR-0045).
rustls-pemfile = "2"
# rustls-pki-types — certificate and key type definitions shared across rustls ecosystem.
# Transitive dep of rustls; promoted here for direct use of CertificateDer, PrivateKeyDer.
rustls-pki-types = "1"
# ring — cryptographic primitives (ADR-0036, transitive via rustls).
# Promoted to direct dep in heimdall-runtime for SHA-256 mTLS identity fingerprinting.
ring = "0.17"
# hyper — HTTP/1.1 + HTTP/2 server (ADR-0029, promoted to direct dep in heimdall-runtime).
# `http1` added in Sprint 33 for the observability HTTP/1.1 endpoint.
hyper = { version = "1", features = ["http1", "http2", "server"] }
# hyper-util — higher-level hyper helpers (ADR-0047).
hyper-util = { version = "0.1", features = ["tokio"] }
# http-body-util — body utilities for hyper 1.x request/response handling (ADR-0048).
http-body-util = "0.1"
# bytes — zero-copy byte buffer (transitive dep of hyper; promoted for direct use, ADR-0049).
bytes = "1"
# quinn — QUIC v1+v2 server/client implementation (ADR-0028, promoted to direct dep, ADR-0050).
# runtime-tokio: integrates quinn's async runtime with tokio; required for async accept/send loops.
quinn = { version = "0.11", features = ["runtime-tokio"] }
# h3 — HTTP/3 server/client over QUIC (ADR-0051).
# Originally specified at 0.0.6; bumped to 0.0.7 because h3-quinn 0.0.9 depends on h3 0.0.7 and
# cargo would otherwise pull in two versions of h3, causing trait-object incompatibilities.
h3 = "0.0.7"
# h3-quinn — quinn transport adapter for h3 (ADR-0052).
# 0.0.7 is incompatible with quinn 0.11.9 (uses quinn::StreamId.0 which is private in that release).
# 0.0.9 is the first version that resolves this with quinn 0.11; it requires h3 0.0.7.
h3-quinn = "0.0.9"

[dev-dependencies]
# loom — exhaustive concurrency model checker (ADR-0040, ENG-056).
loom = { version = "0.7", features = ["futures"] }
# tempfile — temporary directory/file creation for integration tests (ADR-0041).
tempfile = "3"
# tokio test utilities — async test macro and test-time utilities.
tokio = { version = "1", features = ["full", "test-util"] }
# rcgen — X.509 self-signed certificate generation for DoT integration tests (ADR-0046).
# Dev-dependency only; never compiled into the production binary.
rcgen = "0.13"
# hyper client — HTTP/1.1 + HTTP/2 client used in DoH and observability integration tests.
# The `client` feature is only needed in tests; production code only uses `server`.
# `http1` added in Sprint 33 for observability endpoint tests.
hyper = { version = "1", features = ["http1", "http2", "client"] }
# serde_json dev — for admin-RPC test helpers (write_request / read_response).
serde_json = "1"
# rustls (test utilities for DoQ integration tests — TLS client configuration).
rustls = { version = "0.23", default-features = false, features = ["std", "ring"] }
# h3 + h3-quinn — used as H3 client in DoH/H3 integration tests.
h3 = "0.0.7"
h3-quinn = "0.0.9"

[lints]
workspace = true
