[package]
name = "heimdall"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "High-performance, security-focused DNS server."

[[bin]]
name = "heimdall"
path = "src/main.rs"

[dependencies]
heimdall-core = { path = "../heimdall-core" }
heimdall-roles = { path = "../heimdall-roles" }
heimdall-runtime = { path = "../heimdall-runtime" }

# clap — CLI argument parsing (ADR-0060). Features: derive (proc-macro API),
# env (environment variable fallback per BIN-012..BIN-014).
clap = { version = "4", features = ["derive", "env"] }

# tokio — async runtime (transitive dep via heimdall-runtime; direct use in main.rs for block_on).
tokio = { version = "1", features = ["rt-multi-thread", "signal", "time"] }
# arc-swap — lock-free ArcSwap for running state container (transitive dep via heimdall-runtime).
arc-swap = "1"
# tracing — structured diagnostics facade (already a transitive dep via heimdall-runtime).
tracing = "0.1"
# tracing-subscriber — concrete subscriber for the heimdall binary (ADR-0061).
# Features: env-filter (RUST_LOG per BIN-013), json (production log format per BIN-002).
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# ── cargo-deb packaging metadata (ENV-025) ────────────────────────────────────
[package.metadata.deb]
name = "heimdall"
maintainer = "Flavio Oliveira <flavio.c.oliveira@meo.pt>"
copyright = "2024-2026, Flavio Oliveira"
license-file = ["../../LICENSE", "0"]
extended-description = """\
Heimdall is a high-performance, security-focused DNS server written in Rust.
It targets environments of extremely high load and concurrency.
"""
section = "net"
priority = "optional"
# The binary is placed in /usr/sbin (not /usr/bin) because it is a daemon.
assets = [
    ["target/release/heimdall", "/usr/sbin/heimdall", "755"],
    ["../../contrib/systemd/heimdall.service", "/lib/systemd/system/heimdall.service", "644"],
    ["../../contrib/heimdall.toml.example", "/etc/heimdall/heimdall.toml", "640"],
]
# conffiles: operator configuration must be preserved on upgrade.
conf-files = ["/etc/heimdall/heimdall.toml"]
# maintainer-scripts: create the heimdall system user and enable the unit on install.
maintainer-scripts = "../../packaging/deb/"
systemd-units = { enable = true }

# ── cargo-generate-rpm packaging metadata (ENV-025) ───────────────────────────
[package.metadata.generate-rpm]
name = "heimdall"
summary = "High-performance, security-focused DNS server"
description = """
Heimdall is a high-performance, security-focused DNS server written in Rust.
It targets environments of extremely high load and concurrency.
"""
license = "MIT"
# The binary is placed in /usr/sbin.
assets = [
    { source = "target/release/heimdall", dest = "/usr/sbin/heimdall", mode = "755" },
    { source = "../../contrib/systemd/heimdall.service", dest = "/usr/lib/systemd/system/heimdall.service", mode = "644" },
    { source = "../../contrib/heimdall.toml.example", dest = "/etc/heimdall/heimdall.toml", mode = "640", config = true },
]
# %pre script: create system user and group.
pre_install_script = """
getent group heimdall > /dev/null 2>&1 || groupadd --system heimdall
getent passwd heimdall > /dev/null 2>&1 || \
    useradd --system --gid heimdall --no-create-home \
            --home-dir /nonexistent --shell /sbin/nologin \
            --comment "Heimdall DNS Server" heimdall
"""
# %post script: reload systemd and preset the unit.
post_install_script = """
systemctl daemon-reload 2>/dev/null || true
systemctl preset heimdall.service 2>/dev/null || true
"""
# %preun script: stop and disable on removal.
pre_uninstall_script = """
if [ "$1" -eq 0 ]; then
    systemctl stop heimdall.service 2>/dev/null || true
    systemctl disable heimdall.service 2>/dev/null || true
fi
"""

[dev-dependencies]
# tempfile — used in role_boot tests to create a temporary DNSSEC trust-anchor directory.
tempfile = "3"

[target.'cfg(unix)'.dev-dependencies]
# libc — used in signal integration tests to send POSIX signals to subprocesses.
libc = "0.2"

[lints]
workspace = true
