[package]
name = "heimdall"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "High-performance, security-focused DNS server."

# ── Allocator feature flags (BIN-039, ADR-0062) ───────────────────────────────
# Exactly one allocator is active at a time.  In release builds the production
# default is `mimalloc`; `jemalloc` and the system allocator remain available
# via explicit feature selection.  Both flags are mutually exclusive: enabling
# both is a compile-time error (duplicate #[global_allocator]).
[features]
default = ["mimalloc"]
mimalloc = ["dep:mimalloc"]
jemalloc = ["dep:tikv-jemallocator"]

[[bin]]
name = "heimdall"
path = "src/main.rs"

[dependencies]
heimdall-core = { path = "../heimdall-core" }

# redis — async Redis commands in redis_boot (BIN-050).
redis = { version = "0.27", default-features = false, features = ["tokio-comp", "aio"] }

# ── Optional allocators (BIN-039, ADR-0062) ───────────────────────────────────
# mimalloc — Microsoft's low-fragmentation allocator; cross-platform.
# Enabled by default in release builds (winner of Sprint 46 bench, task #540).
mimalloc = { version = "0.1", default-features = false, optional = true }
# tikv-jemallocator — jemalloc binding; Linux-optimised.
tikv-jemallocator = { version = "0.6", optional = true }
heimdall-roles = { path = "../heimdall-roles" }
heimdall-runtime = { path = "../heimdall-runtime" }

# clap — CLI argument parsing (ADR-0060). Features: derive (proc-macro API),
# env (environment variable fallback per BIN-012..BIN-014).
clap = { version = "4", features = ["derive", "env"] }

# tokio — async runtime (transitive dep via heimdall-runtime; direct use in main.rs for block_on).
tokio = { version = "1", features = ["rt-multi-thread", "signal", "time"] }
# arc-swap — lock-free ArcSwap for running state container (transitive dep via heimdall-runtime).
arc-swap = "1"
# tracing — structured diagnostics facade (already a transitive dep via heimdall-runtime).
tracing = "0.1"
# tracing-subscriber — concrete subscriber for the heimdall binary (ADR-0061).
# Features: env-filter (RUST_LOG per BIN-013), json (production log format per BIN-002).
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
# tokio-rustls — TLS acceptor for DoT and DoH/H2 listeners (re-uses the same
# dep already declared in heimdall-runtime; version pinned to match).
tokio-rustls = "0.26"
# rustls — explicit dependency to allow install_default() before any TLS call.
# Must match heimdall-runtime's feature set (ring only, no aws-lc-rs).
rustls = { version = "0.23", default-features = false, features = ["std", "ring"] }

# ── cargo-deb packaging metadata (ENV-025) ────────────────────────────────────
[package.metadata.deb]
name = "heimdall"
maintainer = "Flavio Oliveira <flavio.c.oliveira@meo.pt>"
copyright = "2024-2026, Flavio Oliveira"
license-file = ["../../LICENSE", "0"]
extended-description = """\
Heimdall is a high-performance, security-focused DNS server written in Rust.
It targets environments of extremely high load and concurrency.
"""
section = "net"
priority = "optional"
# The binary is placed in /usr/sbin (not /usr/bin) because it is a daemon.
assets = [
    ["target/release/heimdall", "/usr/sbin/heimdall", "755"],
    ["../../contrib/systemd/heimdall.service", "/lib/systemd/system/heimdall.service", "644"],
    ["../../contrib/heimdall.toml.example", "/etc/heimdall/heimdall.toml", "640"],
]
# conffiles: operator configuration must be preserved on upgrade.
conf-files = ["/etc/heimdall/heimdall.toml"]
# maintainer-scripts: create the heimdall system user and enable the unit on install.
maintainer-scripts = "../../packaging/deb/"
systemd-units = { enable = true }

# ── cargo-generate-rpm packaging metadata (ENV-025) ───────────────────────────
[package.metadata.generate-rpm]
name = "heimdall"
summary = "High-performance, security-focused DNS server"
description = """
Heimdall is a high-performance, security-focused DNS server written in Rust.
It targets environments of extremely high load and concurrency.
"""
license = "MIT"
# The binary is placed in /usr/sbin.
assets = [
    { source = "target/release/heimdall", dest = "/usr/sbin/heimdall", mode = "755" },
    { source = "../../contrib/systemd/heimdall.service", dest = "/usr/lib/systemd/system/heimdall.service", mode = "644" },
    { source = "../../contrib/heimdall.toml.example", dest = "/etc/heimdall/heimdall.toml", mode = "640", config = true },
]
# %pre script: create system user and group.
pre_install_script = """
getent group heimdall > /dev/null 2>&1 || groupadd --system heimdall
getent passwd heimdall > /dev/null 2>&1 || \
    useradd --system --gid heimdall --no-create-home \
            --home-dir /nonexistent --shell /sbin/nologin \
            --comment "Heimdall DNS Server" heimdall
"""
# %post script: reload systemd and preset the unit.
post_install_script = """
systemctl daemon-reload 2>/dev/null || true
systemctl preset heimdall.service 2>/dev/null || true
"""
# %preun script: stop and disable on removal.
pre_uninstall_script = """
if [ "$1" -eq 0 ]; then
    systemctl stop heimdall.service 2>/dev/null || true
    systemctl disable heimdall.service 2>/dev/null || true
fi
"""

[dev-dependencies]
# heimdall-e2e-harness — subprocess spawner + RAII teardown for E2E tests (Sprint 47 task #466).
heimdall-e2e-harness = { path = "../heimdall-e2e-harness" }
# tempfile — used in role_boot tests and listener_boot tests (temp dirs for TLS certs).
tempfile = "3"
# rcgen — generates self-signed TLS certs at test time for DoT/DoH/DoQ listener tests.
rcgen = "0.13"
# testcontainers + redis module — redis_boot integration test (Sprint 46 task #552).
testcontainers = { version = "0.27", features = ["blocking"] }
testcontainers-modules = { version = "0.15", features = ["redis", "blocking"] }
# redis — used in redis_boot tests to seed schema markers before spawning the daemon.
redis = { version = "0.27", features = ["tokio-comp"] }
# tokio — async runtime for redis_boot test setup.
tokio = { version = "1", features = ["rt", "macros"] }
# serde_json — JSON parsing in observability_boot tests.
serde_json = "1"

[target.'cfg(unix)'.dependencies]
# nix — safe wrappers for Unix system calls: user/group lookup (privdrop), resource limits.
nix = { version = "0.29", default-features = false, features = ["user", "resource"] }

[target.'cfg(unix)'.dev-dependencies]
# libc — used in signal integration tests to send POSIX signals to subprocesses.
libc = "0.2"

[lints]
workspace = true
